Updated get user details api
